--- a/.github/workflows/push-to-external-repo.yml
+++ b/.github/workflows/push-to-external-repo.yml
@@ -1,15 +1,25 @@
 name: (main) push to external repo
+
 on:
   push:
     branches:
       - main
+
 jobs:
   push-to-external-repo:
     runs-on: ubuntu-latest
     steps:
-      - name: checkout repository
+      - name: Checkout repository
         uses: actions/checkout@v3
-      - name: push to external repository
+
+      - name: Debug SSH Key
+        run: |
+          echo "SSH_DEPLOY_KEY: ${{ secrets.SSH_DEPLOY_KEY }}"
+          echo "$HOME/.ssh/github content:"
+          cat $HOME/.ssh/github
+          ls -la $HOME/.ssh
+
+      - name: Push to external repository
         uses: peaceiris/actions-gh-pages@v3
         with:
           deploy_key: ${{ secrets.SSH_DEPLOY_KEY }}
