--- a/package.json
+++ b/package.json
@@ -1,32 +1,19 @@
 {
-  "name": "aviquo_next_dev",
+  "name": "aviquo_dev",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postinstall": "prisma generate"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.4.2",
-    "@fortawesome/free-solid-svg-icons": "^6.4.2",
-    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@nextui-org/react": "^2.2.9",
-    "@prisma/client": "^5.6.0",
-    "@vercel/blob": "^0.15.1",
-    "axios": "^1.6.2",
-    "bcrypt": "^5.1.1",
-    "framer-motion": "^10.16.5",
-    "next": "14.0.2",
-    "next-auth": "^5.0.0-beta.3",
+    "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18",
-    "react-hot-toast": "^2.4.1",
-    "react-loader-spinner": "^5.4.5",
-    "zod": "^3.22.4"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -34,9 +21,8 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.0.2",
+    "eslint-config-next": "14.0.4",
     "postcss": "^8",
-    "prisma": "^5.6.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
