--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@prisma/client": "^5.7.0",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "react": "^18",
