--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@prisma/client": "^5.7.0",
+    "@lucia-auth/adapter-prisma": "^3.0.2",
+    "@nextui-org/react": "^2.2.9",
+    "@prisma/client": "^5.7.1",
+    "framer-motion": "^10.16.16",
+    "lucia": "^2.7.6",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
+    "prisma": "^5.7.1",
     "react": "^18",
     "react-dom": "^18",
     "zod": "^3.22.4"
