--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@lucia-auth/adapter-prisma": "^3.0.2",
     "@nextui-org/react": "^2.2.9",
     "@prisma/client": "^5.7.1",
+    "axios": "^1.6.2",
     "framer-motion": "^10.16.16",
     "lucia": "^2.7.6",
     "next": "14.0.4",
