--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lucia": "^2.7.6",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
+    "prettier": "^3.1.1",
     "prisma": "^5.7.1",
     "react": "^18",
     "react-dom": "^18",
