--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "prisma": "^5.7.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "4.2.0",
+    "react-pro-sidebar": "^0.6.0",
+    "sass": "^1.69.5",
     "zod": "^3.22.4"
   },
   "devDependencies": {
