--- a/.env
+++ b/.env
@@ -7,3 +7,7 @@ POSTGRES_PASSWORD="I8mkehuly2ws"
 POSTGRES_DATABASE="verceldb"
 BLOB_READ_WRITE_TOKEN="vercel_blob_rw_VwRZsdM8t0UhsvHz_jOwMAa7YsJZlIQznAkz8L1dMrk2XYi"
 AUTH_SECRET="99r2qydBjRaVHzDy/nG2/S0iWWA8UTof4bjNRn+XB70="
+APP_ID = "1731462"
+KEY = "487e489a938f24c744ac"
+SECRET = "790829dd69f5cd8ccd2b"
+CLUSTER = "mt1"
