--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "next-auth": "^4.24.5",
     "prettier": "^3.1.1",
     "prisma": "^5.7.1",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0-rc2",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "4.2.0",
     "react-pro-sidebar": "^0.6.0",
     "sass": "^1.69.5",
