--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@lucia-auth/adapter-prisma": "^3.0.2",
+    "@mui/material": "^5.15.2",
     "@nextui-org/react": "^2.2.9",
     "@prisma/client": "^5.7.1",
     "axios": "^1.6.2",
