--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate && npx patch-package"
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
@@ -24,6 +24,7 @@
     "lucia": "^2.7.6",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
+    "patch-package": "^8.0.0",
     "prettier": "^3.1.1",
     "prisma": "^5.7.1",
     "pusher": "^5.2.0",
