--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "4.2.0",
+    "react-icons": "^4.2.0",
     "react-pro-sidebar": "^0.6.0",
     "sass": "^1.69.5",
     "zod": "^3.22.4"
@@ -43,8 +43,8 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
-    "postcss": "^8",
     "patch-package": "^8.0.0",
+    "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
