--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "pusher": "^5.2.0",
     "pusher-js": "^8.4.0-rc2",
     "react": "^18",
+    "react-animated-heart": "^0.0.8",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.2.0",
