--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^18",
     "react-animated-heart": "^0.0.8",
     "react-dom": "^18",
+    "react-heart": "^1.0.6",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.2.0",
     "react-pro-sidebar": "^0.6.0",
